fix(taskSidebar): overlap of panel

--- a/src/app/ui/better-drawer/better-drawer-container/better-drawer-container.component.scss
+++ b/src/app/ui/better-drawer/better-drawer-container/better-drawer-container.component.scss
@@ -16,16 +16,19 @@
 .side {
   position: relative;
   z-index: 44;
-  transition: $transition-enter;
+  transition: $transition-leave;
+  transition-property: opacity, margin-right;
   height: 100%;
-  min-width: 300px;
+  // NOTE: if this value is to big it might mess, with the push out logic, as
+  // the width is not really 40% any more
+  min-width: 200px;
   max-width: 700px;
   background: transparent;
   border: 1px solid;
   border-right: 0;
   border-bottom: 0;
+  opacity: 0;
   //box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2), 0px 16px 24px 2px rgba(0, 0, 0, 0.14), 0px 6px 30px 5px rgba(0, 0, 0, 0.12) !important;
-  box-shadow: $whiteframe-shadow-1dp !important;
   @include scrollYImportant();
 
   @include lightTheme() {
@@ -35,7 +38,7 @@
 
   @include darkTheme() {
     background: $dark-theme-bg-slightly-lighter;
-    border-color:  $dark-theme-extra-border-color;
+    border-color: $dark-theme-extra-border-color;
   }
 
   :host.isOver & {
@@ -49,6 +52,12 @@
     @include mq(xs, max) {
       width: 90vw !important;
     }
+  }
+
+  :host.isOpen & {
+    box-shadow: $whiteframe-shadow-1dp !important;
+    opacity: 1;
+    transition: $transition-enter;
   }
 }
 
